--- a/index.html
+++ b/index.html
@@ -225,5 +225,14 @@
     </footer>
 
     <script src="index.js"></script>
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-WLE6GPP83P"></script>
+    <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'G-WLE6GPP83P');
+    </script>
 </body>
 </html>
